examples/valid/optimizacion.cpp
int main() {
  int a = 4;
  int b = 3;
  int c;

  c = a + 0;
  c = c * 1;
  c = 2 + 3;

  return c;
}
