examples/invalid/error_lexico2.cpp
int main() {
  char c = 'ab; // char literal mal cerrado
  return 0;
}
